--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "socket.io-client-weex",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "socket.io-client for weex",
   "keywords": ["weex", "websocket", "socket.io-client", "engine.io-client", "socket.io"],
-  "main": "./lib/index.js",
+  "main": "./dist/index.js",
   "types": "./lib/index.d.ts",
   "scripts": {
     "build": "yarn webpack"
