--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "socket.io-client-weex",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "socket.io-client for weex",
-  "keywords": ["weex", "websocket", "socket.io-client", "engine.io-client", "socket.io"],
+  "keywords": [
+    "weex",
+    "websocket",
+    "socket.io-client",
+    "engine.io-client",
+    "socket.io"
+  ],
   "main": "./dist/index.js",
   "types": "./lib/index.d.ts",
   "scripts": {
@@ -24,7 +30,6 @@
   },
   "devDependencies": {
     "webpack": "^4.31.0",
-    "clean-webpack-plugin": "^2.0.2",
     "webpack-cli": "^3.3.2"
   }
 }
