--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "socket.io-client-weex",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "socket.io-client for weex",
   "keywords": [
     "weex",
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/LincWong/socket.io-client-weex#readme",
   "dependencies": {
-    "engine.io-client-weex": "^1.0.0",
+    "engine.io-client-weex": "1.0.2",
     "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
